--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,74 +1,79 @@
-<header
-    class={`
-    flex justify-between
-    items-center
-    mx-auto
-    py-5
-    sticky top-0
-    w-full xl:w-[1120px]
-    z-10
-  `}
->
-    <img
-        class="rounded-full size-12"
-        src="https://i.imgur.com/1xbmdV6.png"
-        alt="logo KPOETA"
-    />
+---
+// Header.astro
+---
 
-    <nav class="flex flex-row gap-x-10" role="navigation">
+<header class="sticky top-0 z-30 ">
+    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
         <div
-            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto"
+            class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl" 
         >
-            <button
-                data-collapse-toggle="navbar-default"
-                type="button"
-                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                aria-controls="navbar-default"
-                aria-expanded="false"
-            >
-                <span class="sr-only">Open main menu</span>
-                <svg
-                    class="w-5 h-5"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 17 14"
+            <a href="https://flowbite.com" class="flex items-center">
+                <img
+                    src="https://i.imgur.com/1xbmdV6.png"
+                    class="mr-3 h-6 sm:h-9"
+                    alt="Geider"
+                />
+            </a>
+            <div class="flex items-center lg:order-2">
+                <button
+                    data-collapse-toggle="mobile-menu-2"
+                    type="button"
+                    class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="mobile-menu-2"
+                    aria-expanded="false"
                 >
-                    <path
-                        stroke="currentColor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="3"
-                        d="M1 1h15M1 7h15M1 13h15"></path>
-                </svg>
-            </button>
-            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                    <span class="sr-only">Abrir menu</span>
+                    <svg
+                        class="w-6 h-6"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                        ><path
+                            fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"></path></svg
+                    >
+                    <svg
+                        class="hidden w-6 h-6"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                        ><path
+                            fill-rule="evenodd"
+                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                            clip-rule="evenodd"></path></svg
+                    >
+                </button>
+            </div>
+            <div
+                class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1"
+                id="mobile-menu-2"
+            >
+            <span
+            class="self-center flex text-xl whitespace-nowrap dark:text-white lg:text-2xl right-0 absolute mr-4 xs:hidden sm:hidden md:hidden lg:block"
+            >𝄞 Geider</span
+        >
                 <ul
-                    class="font-medium 
-                    flex flex-col 
-                    p-4 md:p-0 mt-4 
-                    rounded-lg 
-                    md:flex-row md:space-x-8 rtl:space-x-reverse "
+                    class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0"
                 >
                     <li>
                         <a
                             href="#top"
-                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                            class="block py-2 pr-4 pl-3 text-gray-700 rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white"
                             aria-current="page">Inicio</a
                         >
                     </li>
-                    
                     <li>
                         <a
                             href="#experience"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"
                             >Experiencia</a
                         >
                     </li>
                     <li>
                         <a
                             href="#Proyectos"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"
                             >Proyectos</a
                         >
                     </li>
@@ -78,51 +83,3 @@
     </nav>
 </header>
 
-<script>
-document.addEventListener('DOMContentLoaded', (event) => {
-    const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
-    const navbar = document.getElementById('navbar-default');
-
-    // Verificar si toggleButton y navbar no son nulos
-    if (toggleButton && navbar) {
-        // Función para mostrar/ocultar el menú
-        const toggleMenu = () => {
-            if (navbar.classList.contains('hidden')) {
-                navbar.classList.remove('hidden');
-            } else {
-                navbar.classList.add('hidden');
-            }
-        };
-
-        // Evento de clic en el botón de toggle
-        toggleButton.addEventListener('click', () => {
-            toggleMenu();
-        });
-
-        // Evento de clic en cualquier parte de la página
-        document.addEventListener('click', (event) => {
-            // Verificar si event.target no es nulo
-            if (event.target) {
-                const isClickInsideNavbar = navbar.contains(event.target as Node);
-                const isClickInsideToggleButton = toggleButton.contains(event.target as Node);
-
-                if (!isClickInsideNavbar && !isClickInsideToggleButton) {
-                    navbar.classList.add('hidden');
-                }
-            }
-        });
-
-        // Evento de clic en enlaces del menú para ocultar el menú
-        const menuLinks = navbar.querySelectorAll('a');
-        menuLinks.forEach((link) => {
-            link.addEventListener('click', () => {
-                navbar.classList.add('hidden');
-            });
-        });
-    } else {
-        console.error('No se encontró el botón de toggle o el menú.');
-    }
-});
-</script>
-
-    
