--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,5 @@
 ---
+// proyecto.astro
 import GitHub from "../icons/GitHub.astro";
 import NextJS from "../icons/NextJs.astro";
 import Tailwind from "../icons/Tailwind.astro";
@@ -66,7 +67,13 @@ const PROJECTS = [
         image0: "/roma/roma.jpg",
         image1: "/roma/roma1.jpg",
         image2: "/roma/roma2.jpg",
-        tags: [TAGS.NEXT, TAGS.TAILWIND, TAGS.THREE, TAGS.FIREBASE, TAGS.GitHub],
+        tags: [
+            TAGS.NEXT,
+            TAGS.TAILWIND,
+            TAGS.THREE,
+            TAGS.FIREBASE,
+            TAGS.GitHub,
+        ],
     },
     {
         title: "El Eden",
@@ -83,156 +90,145 @@ const PROJECTS = [
 ---
 
 {
-    PROJECTS.map(
-        ({
-            image0,
-            image1,
-            image2,
-            title,
-            description,
-            tags,
-        }) => (
-            <>
-                <article>
-                    <h3 class="text-2xl font-semibold text-yellow-200 mb-2">
-                        {title}
-                    </h3>
-                    <p class="text-lg text-white mb-4 text-balance">
-                        {description}
-                    </p>
-                    <ul class="flex flex-col md:mb-8 sm:flex-row flex-wrap gap-x-2 flex-row mb-2">
-                        {tags.map((tag) => (
-                            <li>
-                                <span
-                                    class={`flex gap-x-2 mb-1 rounded-full text-xs ${tag.class} py-1 px-2`}
-                                >
-                                    <tag.icon class="size-4 " />
-                                    {tag.name}
-                                </span>
-                            </li>
-                        ))}
-                    </ul>
-
-                    <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
-                </article>
-                <div class="mb-16">
-                    <div
-                        id="default-carousel"
-                        class="relative  "
-                        data-carousel="static"
-                    >
-                        <div class="overflow-hidden relative rounded shadow-2xl shadow-white/10 aspect-video">
-                            <div
-                                class="hidden duration-700 ease-in-out"
-                                data-carousel-item
+    PROJECTS.map(({ image0, image1, image2, title, description, tags }) => (
+        <>
+            <article>
+                <h3 class="text-2xl font-semibold text-yellow-200 mb-2">
+                    {title}
+                </h3>
+                <p class="text-lg text-white mb-4 text-balance">
+                    {description}
+                </p>
+                <ul class="flex flex-col md:mb-8 sm:flex-row flex-wrap gap-x-2 flex-row mb-2">
+                    {tags.map((tag) => (
+                        <li>
+                            <span
+                                class={`flex gap-x-2 mb-1 rounded-full text-xs ${tag.class} py-1 px-2`}
                             >
-                                <span class="">
+                                <tag.icon class="size-4 " />
+                                {tag.name}
+                            </span>
+                        </li>
+                    ))}
+                </ul>
 
-                                </span>
-                                <img
-                                    src={image0}
-                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
-                                    alt="..."
-                                />
-                            </div>
-
-                            <div
-                                class="hidden duration-700 ease-in-out"
-                                data-carousel-item
-                            >
-                                <img
-                                    src={image1}
-                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
-                                    alt="..."
-                                />
-                            </div>
-
-                            <div
-                                class="hidden duration-700 ease-in-out"
-                                data-carousel-item
-                            >
-                                <img
-                                    src={image2}
-                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
-                                    alt="..."
-                                />
-                            </div>
-                        </div>
-
-                        <div class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2">
-                            <button
-                                type="button"
-                                class="w-3 h-3 rounded-full"
-                                aria-current="false"
-                                aria-label="Slide 1"
-                                data-carousel-slide-to="0"
-                            />
-                            <button
-                                type="button"
-                                class="w-3 h-3 rounded-full"
-                                aria-current="false"
-                                aria-label="Slide 2"
-                                data-carousel-slide-to="1"
-                            />
-                            <button
-                                type="button"
-                                class="w-3 h-3 rounded-full"
-                                aria-current="false"
-                                aria-label="Slide 3"
-                                data-carousel-slide-to="2"
+                <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js" />
+            </article>
+            <div class="mb-16 ">
+                <div
+                    id="default-carousel"
+                    class="relative  "
+                    data-carousel="static"
+                >
+                    <div class="overflow-hidden relative rounded shadow-2xl shadow-white/10 aspect-video">
+                        <div
+                            class="hidden duration-700 ease-in-out"
+                            data-carousel-item
+                        >
+                            <span class=""></span>
+                            <img
+                                src={image0}
+                                class="rounded shadow-2xl shadow-white/10 aspect-video"
+                                alt="..."
                             />
                         </div>
 
-                        <button
-                            type="button"
-                            class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
-                            data-carousel-prev
+                        <div
+                            class="hidden duration-700 ease-in-out"
+                            data-carousel-item
                         >
-                            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30  group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
-                                <svg
-                                    class="w-5 h-5 text-white sm:w-6 sm:h-6"
-                                    fill="none"
-                                    stroke="currentColor"
-                                    viewBox="0 0 24 24"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M15 19l-7-7 7-7"
-                                    />
-                                </svg>
-                                <span class="hidden">Anterior</span>
-                            </span>
-                        </button>
-                        <button
-                            type="button"
-                            class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
-                            data-carousel-next
+                            <img
+                                src={image1}
+                                class="rounded shadow-2xl shadow-white/10 aspect-video"
+                                alt="..."
+                            />
+                        </div>
+
+                        <div
+                            class="hidden duration-700 ease-in-out"
+                            data-carousel-item
                         >
-                            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 0 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
-                                <svg
-                                    class="w-5 h-5 text-white sm:w-6 sm:h-6"
-                                    fill="none"
-                                    stroke="currentColor"
-                                    viewBox="0 0 24 24"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M9 5l7 7-7 7"
-                                    />
-                                </svg>
-                                <span class="hidden">Siguiente</span>
-                            </span>
-                        </button>
+                            <img
+                                src={image2}
+                                class="rounded shadow-2xl shadow-white/10 aspect-video"
+                                alt="..."
+                            />
+                        </div>
                     </div>
-                    <script src="https://cdn.tailwindcss.com/3.4.0" />
+
+                    <div class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2">
+                        <button
+                            type="button"
+                            class="w-3 h-3 rounded-full"
+                            aria-current="false"
+                            aria-label="Slide 1"
+                            data-carousel-slide-to="0"
+                        />
+                        <button
+                            type="button"
+                            class="w-3 h-3 rounded-full"
+                            aria-current="false"
+                            aria-label="Slide 2"
+                            data-carousel-slide-to="1"
+                        />
+                        <button
+                            type="button"
+                            class="w-3 h-3 rounded-full"
+                            aria-current="false"
+                            aria-label="Slide 3"
+                            data-carousel-slide-to="2"
+                        />
+                    </div>
+
+                    <button
+                        type="button"
+                        class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+                        data-carousel-prev
+                    >
+                        <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30  group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
+                            <svg
+                                class="w-5 h-5 text-white sm:w-6 sm:h-6"
+                                fill="none"
+                                stroke="currentColor"
+                                viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M15 19l-7-7 7-7"
+                                />
+                            </svg>
+                            <span class="hidden">Anterior</span>
+                        </span>
+                    </button>
+                    <button
+                        type="button"
+                        class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+                        data-carousel-next
+                    >
+                        <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 0 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
+                            <svg
+                                class="w-5 h-5 text-white sm:w-6 sm:h-6"
+                                fill="none"
+                                stroke="currentColor"
+                                viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M9 5l7 7-7 7"
+                                />
+                            </svg>
+                            <span class="hidden">Siguiente</span>
+                        </span>
+                    </button>
                 </div>
-            </>
-        ),
-    )
+                <script src="https://cdn.tailwindcss.com/3.4.0" />
+            </div>
+        </>
+    ))
 }
